--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="80dp"
         android:layout_height="72dp"
         android:contentDescription="@string/desc"
+        android:clickable="true"
         android:src="@drawable/info"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="128dp"
@@ -30,14 +31,21 @@
         android:layout_height="71dp"
         android:contentDescription="@string/desc"
         android:src="@drawable/param"
+        android:clickable="true"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="226dp"
         tools:layout_editor_absoluteY="521dp" />
 
     <ImageView
+        android:id="@+id/play"
         android:layout_width="234dp"
         android:layout_height="163dp"
+        android:clickable="true"
         android:contentDescription="@string/desc"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:src="@drawable/jouer"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="88dp"
@@ -47,7 +55,12 @@
         android:layout_width="250dp"
         android:layout_height="172dp"
         android:contentDescription="@string/desc"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:src="@drawable/tuto"
+        android:clickable="true"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="80dp"
         tools:layout_editor_absoluteY="387dp" />
