--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -8,10 +8,15 @@
     tools:context=".Splashscreen">
 
     <ImageView
+        android:id="@+id/image_icon"
         android:layout_width="343dp"
         android:layout_height="322dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:contentDescription="@string/desc"
-        android:src="@drawable/Checkfumi"
+        android:src="@drawable/checkfumi"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="34dp"
         tools:layout_editor_absoluteY="204dp" />
