--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,59 +10,67 @@
     <ImageView
         android:layout_width="218dp"
         android:layout_height="204dp"
+        android:layout_marginTop="88dp"
         android:contentDescription="@string/desc"
         android:src="@drawable/logo"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="108dp" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:layout_width="80dp"
         android:layout_height="72dp"
-        android:contentDescription="@string/desc"
+        android:layout_marginTop="512dp"
         android:clickable="true"
+        android:contentDescription="@string/desc"
         android:src="@drawable/info"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="128dp"
-        tools:layout_editor_absoluteY="521dp" />
+        app:layout_constraintHorizontal_bias="0.356"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:layout_width="66dp"
         android:layout_height="71dp"
+        android:layout_marginTop="512dp"
+        android:clickable="true"
         android:contentDescription="@string/desc"
         android:src="@drawable/param"
-        android:clickable="true"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="226dp"
-        tools:layout_editor_absoluteY="521dp" />
+        app:layout_constraintHorizontal_bias="0.66"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/play"
         android:layout_width="234dp"
         android:layout_height="163dp"
+        android:layout_marginTop="292dp"
         android:clickable="true"
         android:contentDescription="@string/desc"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/jouer"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/jouer"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="88dp"
-        tools:layout_editor_absoluteY="312dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:layout_width="250dp"
         android:layout_height="172dp"
+        android:clickable="true"
         android:contentDescription="@string/desc"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/tuto"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/tuto"
-        android:clickable="true"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="387dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.677"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
