--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/play"
+        android:id="@+id/choix"
         android:layout_width="234dp"
         android:layout_height="163dp"
         android:layout_marginTop="292dp"
