--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,36 +20,10 @@
         tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="512dp"
-        android:clickable="true"
-        android:contentDescription="@string/desc"
-        android:src="@drawable/info"
-        app:layout_constraintHorizontal_bias="0.356"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:layout_width="66dp"
-        android:layout_height="71dp"
-        android:layout_marginTop="512dp"
-        android:clickable="true"
-        android:contentDescription="@string/desc"
-        android:src="@drawable/param"
-        app:layout_constraintHorizontal_bias="0.66"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
         android:id="@+id/jouer"
         android:layout_width="234dp"
         android:layout_height="163dp"
-        android:layout_marginTop="292dp"
+        android:layout_marginTop="300dp"
         android:clickable="true"
         android:contentDescription="@string/desc"
         android:src="@drawable/jouer"
@@ -65,13 +39,13 @@
         android:layout_height="172dp"
         android:clickable="true"
         android:contentDescription="@string/desc"
-        android:src="@drawable/tuto"
+        android:src="@drawable/tutoriel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.677"
+        app:layout_constraintVertical_bias="0.731"
         tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
