--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:focusable="true" />
 
     <ImageView
         android:id="@+id/tuto"
@@ -46,6 +47,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.731"
+        tools:ignore="MissingConstraints"
+        android:focusable="true" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="245dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="4dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="@+id/tuto"
+        tools:layout_editor_absoluteY="474dp"
+        android:alpha="0"
         tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
